fix home-header display on mobile

--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -9,29 +9,30 @@
 .home-header{
     height:0;
     position: relative;
-    padding-bottom: 73.7373396%; /*keep aspect ratio of bg image */
-    background-image: url(/images/lutchenca-medeiros-FcSYIRwh4Bw-unsplash.jpg); 
-    padding-bottom: 64.05023548%;
+    // padding-bottom: 73.7373396%; /*keep aspect ratio of bg image */
+    // background-image: url(/images/lutchenca-medeiros-FcSYIRwh4Bw-unsplash.jpg); 
+    padding-bottom: 64.05023548%;/*keep aspect ratio of bg image */
     background-image: url(/images/home-hero.jpg);
     background-size: contain;
     background-repeat: no-repeat;
+    margin-bottom: 2rem;
 }
 .home-info{
-    padding-top: 2rem;
-    margin-left: 1.5rem;
-    width: 40%;
+    padding-top: 1rem;
+    margin-left: 1rem;
+    width: 50%;
     color: #fff;
 }
 .home-title{
     text-transform: uppercase;
-    font-size: 36px;
+    font-size: 32px;
     font-weight: 900;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
 }
 .home-header-text{
     font-weight: 700;
     font-size: 1rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
 }
 .home-header .button{
     padding: 10px;
@@ -45,6 +46,7 @@
     background-color: rgba(255, 255, 255, 0.8);
     padding: 0 10px;
     font-size: .8rem;
+    text-align: right;
 }
 
 .basic-poses h2, .about h2{
@@ -70,6 +72,16 @@
     .home-header .button{
         padding: 0 1.75em 0 1.75em;
         line-height: 3.45em;
+    }
+
+    .home-header .caption, .home-basic-poses .caption, .home-about .caption{
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 0 10px;
+        font-size: .8rem;
+        text-align: left;
     }
 }
 
